--- a/annyeong.css
+++ b/annyeong.css
@@ -22,7 +22,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding-top: 150px;
-  background-image: url("images/1.png");
+  background-image: url("1.png");
   background-size: cover; /* Make the background image cover the entire container */
   background-position: center; /* Center the background image */
   background-repeat: no-repeat; 
@@ -39,7 +39,7 @@ section {
 body.dark-mode {
   background-color: #333; /* Dark mode background color */
   color: #fff; /* Dark mode text color */
-  background-image: url("images/2.png");
+  background-image: url("2.png");
   background-size: cover; /* Make the background image cover the entire container */
   background-position: center; /* Center the background image */
   background-repeat: no-repeat; 
